# LigeroRSA

./: .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  README.md  version.sh
aws_scripts/: README.md  check_errors_dispatching.sh  go_EC2.sh  ligero_mail_alert.sh  memory_usage.sh  native_build.sh  propagate_keys.sh  put_EC2.sh  rebuild.sh  rebuild_and_run_simulation.sh  rsa_ceremony_deploy.sh  rsa_ceremony_deploy_dry_run.sh  rsa_ceremony_deploy_master.sh  rsa_ceremony_deploy_worker.sh  rsa_ceremony_participate_master.sh  rsa_ceremony_start.sh  rsa_ceremony_start_master.sh  rsa_ceremony_start_worker.sh  rsa_dispatch_binaries.sh  rsa_dispatch_binaries_worker.sh  rsa_list_all.sh  rsa_register_all.sh  rsa_register_region.sh  rsa_terminate_all.sh  run_EC2.sh  run_simulation.sh
aws_scripts/AWS/: config  logging  mail_alerts  map_deployment_rsa_ceremony  map_deployment_rsa_ceremony.100  map_deployment_rsa_ceremony.1024  map_deployment_rsa_ceremony.14  map_deployment_rsa_ceremony.2  map_deployment_rsa_ceremony.3  map_deployment_rsa_ceremony.4  map_deployment_rsa_ceremony.5  map_deployment_rsa_ceremony.allregions  usage.csv
benchmarks/: CMakeLists.txt  benchmark_coordinator_01_serialization.cpp  benchmark_fft_ntt_01  benchmark_fft_ntt_01.cpp  benchmark_fft_ntt_02  benchmark_fft_ntt_02.cpp  benchmark_party_01_serialization.cpp  benchmarks_local_test.sh
doc/notebooks/: EncryptionScheme.ipynb
include/: Common.hpp  EncryptedClient.hpp  EncryptedCoordinator.hpp  Factoring.hpp  FastFourierTransform.hpp  FiniteFields.hpp  GatheringCoordinator.hpp  Hash.hpp  LatticeEncryption.hpp  Ligero.hpp  Math.hpp  MerkleTree.hpp  NumberTheoreticTransform.hpp  SecretSharing.hpp  SecretSharingNTT.hpp  Transport.hpp  ZkArgument.hpp  ZkTests.hpp
include/protocol/: Builder.hpp  Constraint.hpp  ConstraintSystem.hpp  ExpressNPStatement.hpp  WeightedUnionFind.hpp
lib/include/nfl/: gmp.hpp  poly.hpp  poly_p.hpp
process_logs/: get_1a.sh  get_2a_peak_memory.sh  get_3a.sh  get_4b_message_size.sh  get_6a_process_vs_idle.sh  parse.py  run-all.sh
process_logs/raw/: 2.a.PeakMemParty.RAW.csv  2.a.PeakMemParty.csv  4.b.MessageSizePerTypeForCoordinator.csv  6.a.TimeToVerifyZkProof.csv
python/: build.sh  ligero.cpp  setup.py
python/.ipynb_checkpoints/: EncryptionScheme-checkpoint.ipynb
scripts/: build-binary-docker.sh  build-ubuntu-docker.sh  measure-peak-mem.sh  rebuild-and-run-tests.sh  rebuild.sh  run-coordinator-in-docker.sh  run-party-in-docker.sh  run-tests-in-ubuntu-docker.sh  run-tests.sh  start-bash-in-docker.sh
src/: CMakeLists.txt  benchmark_keygen.cpp  coordinator_full_protocol.cpp  distributed_verifier.cpp  malicious_party.cpp  manual_verifier.cpp  party_full_protocol.cpp  validator.cpp
tests/: CMakeLists.txt
tests/encryption/: TestRingLWE.hpp  test_ringlwe_01_mocked.cpp
tests/math/: test_math_01_bucketing.cpp  test_math_02_basic.cpp
tests/protocol/: TestHelpers.hpp  test_ringlwe_02_vecprod_mocked.cpp  test_ringlwe_03_vecprod.cpp  test_ringlwe_04_presieve.cpp  test_ringlwe_05_candidates.cpp  test_ringlwe_06_jacobi.cpp  test_ringlwe_07_gcd.cpp
tests/transport/: TestHelpers.hpp  test_transport_02_keygen_exception_handling.cpp  test_transport_03_presieve_exception_handling.cpp  test_transport_04_wrong_ai.cpp  test_transport_05_wrong_jacobi_seed.cpp  test_transport_06_wrong_gcd_and_jacobi_seed.cpp  test_transport_07_party_aborts_on_registration.cpp  test_transport_lwe_01_basic.cpp
tests/zk/: test_fft_01.cpp  test_mt_01.cpp  test_secret_sharing_01.cpp  test_secret_sharing_02.cpp  test_zk_01.cpp  test_zk_02.cpp  test_zk_03.cpp  test_zk_04.cpp  test_zk_05.cpp  test_zk_06.cpp
